examples/should-fail/f23_bad_delta_alias_target.lean
def demo3_bad_delta_alias : Sort 2 :=
  Type

def demo3_bad_delta_alias_target : demo3_bad_delta_alias :=
  Sort 2
